# ValaOOP

./: .gitignore  Cat.vala  Dog.vala  Person.vala  Pet.vala  README.md  Rabbit.vala  main.vala  meson.build
src/: Cat.vala  Dog.vala  NotifySignal.vala  Person.vala  Rabbit.vala
